--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.11.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,10 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^0.22.0
+  #flutter_svg: ^0.22.0
   firebase_core: ^1.18.0
   cloud_firestore: ^3.1.18
-  #flutter_bluetooth_serial: ^0.4.0
+  flutter_bluetooth_serial: ^0.4.0
+  location: ^4.4.0
+
 
 dev_dependencies:
   flutter_test:
