--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^3.1.18
   flutter_bluetooth_serial: ^0.4.0
   location: ^4.4.0
+  #shared_preferences: ^2.0.15
+
 
 
 dev_dependencies:
