--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  firebase_core: ^1.18.0
-  cloud_firestore: ^3.1.18
-  flutter_bluetooth_serial: ^0.4.0
-  location: ^4.4.0
+  cupertino_icons: "1.0.5"
+  firebase_core: "2.15.0"
+  cloud_firestore: "4.8.3"
+  flutter_bluetooth_serial: "0.4.0"
+  location: "5.0.1"
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: "2.0.2"
 flutter:
   uses-material-design: true
   assets:
