--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cloud_firestore: "4.8.3"
   flutter_bluetooth_serial: "0.4.0"
   location: "5.0.1"
+  awesome_snackbar_content: ^0.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
