--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bluetooth_serial: "0.4.0"
   location: "5.0.1"
   awesome_snackbar_content: ^0.1.3
+  permission_handler: ^10.4.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
