--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,47 +10,50 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: "1.0.5"
-  firebase_core: "2.15.0"
-  cloud_firestore: "4.8.3"
   flutter_bluetooth_serial: "0.4.0"
   location: "5.0.1"
   awesome_snackbar_content: ^0.1.3
   permission_handler: ^10.4.3
-  firebase_auth: ^4.7.2
   google_sign_in: ^6.1.4
-  flutter_riverpod: ^2.3.6
-  riverpod_annotation: ^2.1.1
-  freezed: ^2.4.2
-  freezed_annotation: ^2.4.1
-  build_runner: ^2.4.6
-  easy_localization: ^3.0.2
+  flutter_riverpod: "2.3.6"
+  riverpod_annotation: "2.1.1"
+  easy_localization: ^3.0.1
+  firebase_core_platform_interface: "4.8.0"
+  firebase_core: "2.14.0"
+  cloud_firestore: "4.4.3"
+  firebase_auth: "4.6.2"
+  cloud_functions: "4.0.11"
+  firebase_analytics: "10.1.4"
+  firebase_crashlytics: "3.0.15"
+  firebase_dynamic_links: "5.0.15"
+  firebase_storage: "11.0.14"
+  firebase_messaging: "14.2.5"
+  firebase_remote_config: "3.0.13"
+  freezed_annotation: "2.2.0"
+  json_annotation: "4.8.1"
   logger: ^2.0.1
-  firebase_crashlytics: ^3.3.4
   loading:
     git:
       url: https://github.com/adnanjpg/loading.git
   life_saver_extensions:
     git:
       url: https://github.com/adnanjpg/life_saver_extensions.git
-  google_fonts: ^5.1.0
+  google_fonts: "5.1.0"
   go_router: ^6.0.1
-  firebase_analytics: ^10.4.4
-  cloud_functions: ^4.3.4
-  firebase_storage: ^11.2.5
-  firebase_remote_config: ^4.2.4
   uuid: ^3.0.7
   device_info_plus: ^9.0.3
   app_tracking_transparency: ^2.0.4
-  firebase_dynamic_links: ^5.3.4
-  firebase_messaging: ^14.6.5
   connectivity_plus: ^4.0.2
   image_cropper: ^5.0.0
   image_picker: ^1.0.2
-  font_awesome_flutter: ^10.5.0
+  font_awesome_flutter: "10.4.0"
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: "2.0.2"
+  freezed: "2.3.5"
+  build_runner:
+  json_serializable: "6.7.0"
 flutter:
   uses-material-design: true
   assets:
