--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   image_cropper: ^5.0.0
   image_picker: ^1.0.2
   font_awesome_flutter: "10.4.0"
+  google_maps_flutter: ^2.4.0
+  google_maps_flutter_web: ^0.5.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
