--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   location: "5.0.1"
   awesome_snackbar_content: ^0.1.3
   permission_handler: ^10.4.3
-  google_sign_in: ^6.1.4
+  google_sign_in: "6.1.4"
   flutter_riverpod: "2.3.6"
   riverpod_annotation: "2.1.1"
   easy_localization: ^3.0.1
