--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,39 +1,27 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
     "configurations": [
         {
-            "name": "Afad-Mobile-App",
+            "name": "Launch AFAD",
             "request": "launch",
             "type": "dart",
-            "program": "lib/main.dart",
+            "program": "lib/main_afad.dart",
             "args": [
-                "--web-port",
-                "65133"
+                "--flavor",
+                "afad",
+                "--target",
+                "lib/main_afad.dart"
             ]
         },
         {
-            "name": "Afad-Mobile-App (profile mode)",
+            "name": "Launch TRACKER",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "profile",
-            "program": "lib/main.dart",
+            "program": "lib/main_tracker.dart",
             "args": [
-                "--web-port",
-                "65133"
-            ]
-        },
-        {
-            "name": "Afad-Mobile-App (release mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "release",
-            "program": "lib/main.dart",
-            "args": [
-                "--web-port",
-                "65133"
+                "--flavor",
+                "tracker",
+                "--target",
+                "lib/main_tracker.dart"
             ]
         }
     ]
