--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.afad_app">
-   <application
-        android:label="afad_app"
+    <application
+        android:label="@string/app_name"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity
             android:name=".MainActivity"
@@ -21,9 +20,8 @@
                  while the Flutter UI initializes. After that, this theme continues
                  to determine the Window background behind the Flutter UI. -->
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
+                android:name="io.flutter.embedding.android.NormalTheme"
+                android:resource="@style/NormalTheme"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -33,22 +31,21 @@
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
-            android:value="2" />
+            android:value="2"/>
     </application>
     <!-- required for API 18 - 30 -->
     <uses-permission
-        android:name="android.permission.BLUETOOTH" />
+        android:name="android.permission.BLUETOOTH"/>
     <uses-permission
-        android:name="android.permission.BLUETOOTH_ADMIN" />
-
+        android:name="android.permission.BLUETOOTH_ADMIN"/>
     <!-- required for API 23 - 30 -->
     <uses-permission-sdk-23
-        android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission-sdk-23
-        android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+        android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <!-- API 31+ -->
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission
-        android:name="android.permission.BLUETOOTH_SCAN" />
+        android:name="android.permission.BLUETOOTH_CONNECT"/>
+    <uses-permission
+        android:name="android.permission.BLUETOOTH_SCAN"/>
 </manifest>
