--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ version: 1.0.0+1
 # flutter 3.10.4
 # dart 3.0.3
 environment:
-  sdk: "3.0.6"
+  sdk: "3.0.3"
 dependencies:
   flutter:
     sdk: flutter
@@ -59,6 +59,7 @@ dependencies:
   font_awesome_flutter: "10.4.0"
   google_maps_flutter: ^2.4.0
   google_maps_flutter_web: ^0.5.3
+  intl: ^0.18.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,6 +67,8 @@ dev_dependencies:
   freezed: "2.3.5"
   build_runner:
   json_serializable: "6.7.0"
+  flutter_native_splash: "2.3.1"
+  flutter_launcher_icons: "0.13.1"
 flutter:
   uses-material-design: true
   assets:
