feat: tracker screens init

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   google_maps_flutter: ^2.4.0
   google_maps_flutter_web: ^0.5.3
   intl: ^0.18.0
+  firebase_database: ^10.2.3
+  qr_flutter: ^4.1.0
+  qr_code_scanner: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
