--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,7 +13,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
+          flutter-version: "3.10.4"
           channel: "stable"
+      - run: flutter pub get
       - run: flutter build web --flavor afad --target lib/main_afad.dart
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
