--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ version: 1.0.0+1
 # flutter 3.10.4
 # dart 3.0.3
 environment:
-  sdk: "3.2.0-91.0.dev"
+  sdk: "3.0.3"
 dependencies:
   flutter:
     sdk: flutter
@@ -83,6 +83,7 @@ flutter:
     - assets/images/home/quizzes/
     - assets/fonts/
     - assets/map_style.txt
+    - assets/il_ilce.json
   fonts:
     - family: AppIcons
       fonts:
